--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-env": "^1.4.0",
     "coveralls": "^2.13.1",
@@ -62,10 +63,8 @@
     ],
     "plugins": [
       [
-        "transform-object-rest-spread",
-        {
-          "useBuiltIns": true
-        }
+        "transform-class-properties",
+        "transform-object-rest-spread"
       ]
     ]
   },
@@ -86,12 +85,6 @@
         "never"
       ],
       "no-console": "off",
-      "no-constant-condition": [
-        "error",
-        {
-          "checkLoops": false
-        }
-      ],
       "semi": [
         "error",
         "always"
