--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,7 @@
 language: node_js
 node_js:
   - 6
+before_install:
+  - npm update -g npm
 script:
   - cat ./test/coverage/lcov.info | ./node_modules/.bin/coveralls
