--- a/package.json
+++ b/package.json
@@ -23,20 +23,20 @@
     "node": ">=6"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0"
+    "babel-polyfill": "6.23.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-transform-class-properties": "^6.23.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-env": "^1.4.0",
-    "coveralls": "^2.13.1",
-    "eslint": "^3.19.0",
-    "eslint-watch": "^3.1.0",
-    "jest": "^20.0.3",
-    "mute": "^2.0.6",
-    "rimraf": "^2.6.1"
+    "babel-cli": "6.24.1",
+    "babel-eslint": "7.2.3",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-preset-env": "1.6.0",
+    "coveralls": "2.13.1",
+    "eslint": "4.2.0",
+    "eslint-watch": "3.1.2",
+    "jest": "20.0.4",
+    "mute": "2.0.6",
+    "rimraf": "2.6.1"
   },
   "scripts": {
     "build": "babel ./src --out-dir ./lib --source-maps --ignore *.test.js",
